# claude-french

./: .gitignore  README.md  docker-compose.yml
.specify/memory/: constitution.md
infra/: cloudbuild.yaml
infra/cloud-run/: api.yaml  scheduler.yaml  worker.yaml
mobile/: .env.example  app.json  jest.config.js  package.json  tsconfig.json
services/api/: .env.example  Dockerfile  pyproject.toml
services/shared/: pyproject.toml
services/shared/ai/: __init__.py  anonymizer.py  cognates.py  gemini.py  huggingface.py  logger.py  router.py  schemas.py
services/shared/mastery/: calculator.py
services/shared/models/: __init__.py  evaluation.py  gamification.py  lesson.py  mastery.py  pronunciation.py  vocabulary.py
services/shared/srs/: __init__.py  fsrs.py  test_fsrs.py
services/worker/: .env.example  Dockerfile  pyproject.toml
services/worker/src/: config.py  main.py
services/worker/src/jobs/: cultural_gen.py  difficulty_recal.py  lesson_gen.py  pronunciation_eval.py  writing_eval.py
specs/001-hybrid-ai-french-learning/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-hci-ux-best-practices/: plan.md  spec.md  tasks.md
supabase/: config.toml
supabase/migrations/: 001_enums.sql  002_user_profiles.sql  003_vocabulary_items.sql  004_lessons.sql  005_skill_mastery.sql  006_ai_model_usage_logs.sql  007_vocabulary_progress.sql  008_exam_attempts.sql  009_error_patterns.sql  010_conversation_sessions.sql  011_writing_evaluations.sql  012_pronunciation_scores.sql  013_storage_bucket.sql  014_cultural_notes.sql  015_gamification.sql
supabase/seed/: a1_cultural.sql  a1_grammar.sql  a1_listening.sql  (+2 more)
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+132 files in other folders)
