[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai", "models", "srs", "mastery"]

[project]
name = "french-learning-shared"
version = "0.1.0"
description = "French Learning Platform Shared Package"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "supabase>=2.11.0",
    "huggingface-hub>=0.27.0",
    "google-genai>=1.0.0",
    "fsrs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
